7.0.5 init 2